<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:layout_marginEnd="5dp"
            android:textSize="20sp"
            android:text="@string/name"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:textSize="20sp"
            android:hint="Arda Memili"
            android:inputType="text" />
    </LinearLayout>


    <LinearLayout
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="@string/emergency_num"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:textSize="20sp"
            android:hint="+90 012 3456789"
            android:inputType="text" />
    </LinearLayout>


    <LinearLayout
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:layout_marginEnd="5dp"
            android:textSize="20sp"
            android:text="@string/birthday"/>
        <EditText
            android:id="@+id/birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="0.4"
            android:hint="05.12.2005"
            android:inputType="text" />
    </LinearLayout>


    <LinearLayout
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:layout_marginEnd="5dp"
            android:textSize="20sp"
            android:text="@string/dis"/>
        <EditText
            android:id="@+id/dis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="0.4"
            android:hint="@string/dis_hint"
            android:inputType="text" />
    </LinearLayout>


    <LinearLayout
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:layout_marginEnd="5dp"
            android:textSize="20sp"
            android:text="@string/blood"/>
        <EditText
            android:id="@+id/blood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:textSize="20sp"
            android:hint="0RH+"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:layout_marginEnd="5dp"
            android:textSize="20sp"
            android:text="Önemli Not"/>
        <EditText
            android:id="@+id/note"
            android:layout_weight="0.35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:hint="Çantamda ilacım var / *Boş*"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:onClick="CreateaQrCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/genbtn" />
</LinearLayout>